kubernetes/apps/storage/garage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: storage
  annotations:
    hajimari.io/enable: "false"
spec:
  hostnames:
    - "s3.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage
          port: 3900
